# sloppy-ui

./: AGENTS.md  CMakeLists.txt  README.md  movies.json  skia_vulkan_test.cpp  sloppy_ui.cpp
src/: BlurBackgroundMesh.cpp  BlurBackgroundMesh.hpp  DirectInputPluginApi.h  DirectInputPluginLoader.cpp  DirectInputPluginLoader.hpp  InputProcessor.cpp  InputProcessor.hpp  KawaseBlurFilter.cpp  KawaseBlurFilter.hpp  Movie.cpp  Movie.hpp  PlatformInput.hpp  SkiaRenderer.cpp  SkiaRenderer.hpp  SkiaRendererDetail.cpp  SkiaRendererPosterCache.cpp  Swapchain.cpp  Swapchain.hpp  SwapchainImage.cpp  SwapchainImage.hpp  VulkanGpuOpenAllocator.cpp  VulkanGpuOpenAllocator.hpp
